Bug 466443 - The "Configure..." entry in the new Wide Gamut Color Selector docker's hamburger menu is not translatable
Summary: The "Configure..." entry in the new Wide Gamut Color Selector docker's hambur...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-26 01:44 UTC by Tyson Tan
Modified: 2023-02-27 08:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Untranslatable "Configure..." entry in Wide Gamut Color Selector's hamburger menu (43.86 KB, image/png)
2023-02-26 01:44 UTC, Tyson Tan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2023-02-26 01:44:59 UTC
Created attachment 156739 [details]
Untranslatable "Configure..." entry in Wide Gamut Color Selector's hamburger menu

The "Configure..." entry in the new Wide Gamut Color Selector docker's hamburger menu is not translatable. There is no string in krita.pot that matches this entry.

It can be accessed by:
Wide Gamut Color Selector docker -> Hamburger menu botton (top-right) -> Configure...
Comment 1 amyspark 2023-02-27 08:01:01 UTC
Git commit 62515d7fe9f61f7c8ce357494e8170da30a9f5f6 by L. E. Segovia.
Committed on 26/02/2023 at 13:45.
Pushed by lsegovia into branch 'master'.

WGColorSelectorDock: allow localizing the hamburger menu

M  +1    -1    plugins/dockers/widegamutcolorselector/WGColorSelectorDock.cpp

https://invent.kde.org/graphics/krita/commit/62515d7fe9f61f7c8ce357494e8170da30a9f5f6