WGColorSelectorDock: allow localizing the hamburger menu

BUG:466443